      are exported as \code{tools::langElts}.

      \item \code{str(x)} now displays \code{"Time-Series"} also for
      matrix (multivariate) time-series, i.e. when \code{is.ts(x)} is true.

      \item \code{lengths(x)} now also works (trivially) for atomic
      \code{x} and hence can be used more generally as an efficient
      replacement of \code{sapply(x, length)} and similar.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} has a new option
      \option{--ignore-vignettes} for use with non-Sweave vignettes
      whose \samp{VignetteBuilder} package is not available.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item The included versions of \code{zlib}, \code{bzip2},
      \code{xz} and PCRE have been removed, so system versions are
      required (see the \sQuote{R Installation and Administration} manual).
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item C-level \code{asChar(x)} is fixed for when \code{x} is not a
      vector, and it returns \dQuote{TRUE}/\dQuote{FALSE} instead of
      \dQuote{T}/\dQuote{F} for logical vectors.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.2.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{utf8ToInt()} now checks that its input is valid UTF-8
      and returns \code{NA} if it is not.

      \item \code{install.packages()} now allows \code{type = "both"}
      with \code{repos = NULL} if it can infer the type of file.

      \item \code{nchar(x, *)} and \code{nzchar(x)} gain a new argument
      \code{keepNA} which governs how the result for \code{NA}s in
      \code{x} is determined.  For the \R 3.2.x series, the default
      remains \code{FALSE} which is fully back compatible.
      From \R 3.3.0, the default will change to \code{keepNA = NA} and
      you are advised to consider this for code portability.

      \item \code{news()} more flexibly extracts dates from package
      \file{NEWS.Rd} files.
    }
  }
